<resources>
    <string name="app_name">Vista Delivery</string>
    <string name="home">Dashboard</string>
    <string name="graph">Graph</string>
    <string name="notifications">Notifications</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="name1">Mandatory field 1<font color='#FF0000'>*</font></string>
    <string name="dashboard">DashBoard</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="create_pass">Create Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="good_mrng">Good Morning</string>
    <string name="sales_quotation">Sales Quick Links</string>
    <string name="budget_1_svng">2 Budget,1 Savings</string>
    <string name="add_new"> + Add New</string>
    <string name="recent_transaction"> Recent Transaction</string>
    <string name="see_all"> See All</string>
    <string name="total_txt"> Sales This Month </string>
    <string name="income"> Income </string>
    <string name="expense"> Expense </string>
    <string name="delivery"> Delivery </string>
    <string name="deliveries"> Deliveries </string>
    <string name="product_name"> Product Name </string>
    <string name="today">Today</string>
    <string name="events">Events</string>
    <string name="tasks">Tasks</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="pipeline">Pipeline</string>
    <string name="opportunities">Opportunities</string>
    <string name="notification">Notification</string>
    <string name="quotation">Quotation</string>
    <string name="quotation_update">Update Quotation</string>
    <string name="order_detal">Order Detail</string>
    <string name="quotations">Quotations</string>
    <string name="opportunity">Opportunity</string>
    <string name="update_opportunity">Update Opportunity</string>
    <string name="quotation_detail">Detail Quotation</string>
    <string name="order_detail">Order Detail</string>
    <string name="cancel">Cancel</string>
    <string name="trip_name_mand">Trip Name <font color='#FF0000'>*</font></string>
    <string name="expense_employee_mand">Expanse Sales Employee <font color='#FF0000'>*</font></string>
    <string name="expense_employee_name_mand">Expense Employee Name <font color='#FF0000'>*</font></string>
    <string name="expense_mode_mand">Type Of Expense <font color='#FF0000'>*</font></string>
    <string name="create">Create</string>
    <string name="opportunity_name_mand">Opportunity Name<font color='#FF0000'>*</font></string>
    <string name="opportunity_name">Opportunity Name</string>
    <string name="bussiness_partner">Business Partner</string>
    <string name="contact_person">Contact Person</string>
    <string name="sales_employee">Sales Employee</string>
    <string name="remarks">Remarks</string>
    <string name="stage">Stage</string>
    <string name="potential_ammount">Potential Amount</string>
    <string name="closing">Closing Rate</string>
    <string name="stage_start_date">Stage Start Date</string>
    <string name="stage_End_date">Stage End Date</string>
    <string name="sales_order">Orders</string>
    <string name="new_order">Add Order</string>
    <string name="series">Series</string>
    <string name="currency">Currency</string>
    <string name="posting_date">Posting Date</string>
    <string name="posting_datemand">Posting Date<font color='#FF0000'>*</font></string>
    <string name="ceated_datemand">Created Date <font color='#FF0000'>*</font></string>
    <string name="delievery_date">Delivery Date</string>
    <string name="document_date">Document Date</string>
    <string name="document_date_mand">Document Date<font color='#FF0000'>*</font></string>
    <string name="customer_date">Customer Date</string>
    <string name="customer_ref_no">Customer Ref. No.</string>
    <string name="selected_items">Selected Items</string>
    <string name="items">Items</string>
    <string name="item">Item</string>
    <string name="total_before_discont">Total Before Discount</string>
    <string name="discont">Discount</string>
    <string name="_discont">Discount % </string>
    <string name="tax">Tax </string>
    <string name="total">Total </string>
    <string name="rounding">Rounding </string>
    <string name="ship_to">Ship To </string>
    <string name="bill_to">Bill To </string>
    <string name="shipping_type_all">Shipping Type </string>
    <string name="payment_term">Payment Terms </string>
    <string name="payment_method">Payment Methods </string>
    <string name="bp_project">BP Project </string>
    <string name="title_activity_invoice">Opportunities </string>
    <string name="order_label">Sales Orders </string>
    <string name="invoice">Invoice </string>
    <string name="invoices">Invoices </string>
    <string name="inventory">Inventory </string>
    <string name="header">Header </string>
    <string name="contents">Contents </string>
    <string name="logistics">Logistics </string>
    <string name="accounting">Accounting </string>
    <string name="doc_no"> Doc. No. </string>
    <string name="customer">Customer </string>
    <string name="view_all_iem">Click to view all Items. </string>
    <string name="view_all">View All </string>
    <string name="valid_untill">Valid Until </string>
    <string name="valid_untill_mand">Valid Date <font color='#FF0000'>*</font></string>
    <string name="save">Save </string>
    <string name="done">Done </string>
    <string name="choose_item">Choose Item </string>
    <string name="alternative">Alternative </string>
    <string name="item_code">Item Code </string>
    <string name="description">Description </string>
    <string name="warehouse">Warehouse </string>
    <string name="gross_price">Gross Price </string>
    <string name="tax_code">Tax Code </string>
    <string name="quantity">Quanity</string>
    <string name="unit_price">Unit Price</string>
    <string name="measure_unit">Unit of Measure</string>
    <string name="project">Project</string>
    <string name="distribution_rule">Distribution Rule</string>
    <string name="open_inv_qty">Open Inv. Qty.</string>
    <string name="item_per_sell_unit">Items per Sales Unit </string>
    <string name="general"> General </string>
    <string name="foreign_name"> Foreign Name </string>
    <string name="account_balance"> Account Balance </string>
    <string name="credit_limit"> Credit Limit </string>
    <string name="industry"> Industry </string>
    <string name="group"> Group </string>
    <string name="telephone"> Telephone </string>
    <string name="e_maiul"> E-Mail </string>
    <string name="website"> Website </string>
    <string name="main_contact"> Main Contact </string>
    <string name="all_contacts"> All Contacts </string>
    <string name="all_address"> All Addresses </string>
    <string name="bp_type"> BP Type </string>
    <string name="owner"> Owner </string>
    <string name="code"> Code </string>
    <string name="contact_id"> Contact Id </string>
    <string name="first_name"> First Name </string>
    <string name="first_name_mand"> First Name <font color='#FF0000'>*</font></string>
    <string name="last_name"> Last Name </string>
    <string name="last_name_mand"> Last Name <font color='#FF0000'>*</font></string>
    <string name="title"> Title </string>
    <string name="date_mand">Date <font color='#FF0000'>*</font></string>
    <string name="position_mand"> Position <font color='#FF0000'>*</font></string>
    <string name="title_mand"> Title <font color='#FF0000'>*</font></string>
    <string name="time_mand">Time <font color='#FF0000'>*</font></string>
    <string name="host_mand"> Host <font color='#FF0000'>*</font></string>
    <string name="repeated_mand">Repeated <font color='#FF0000'>*</font></string>
    <string name="position">Position </string>
    <string name="mobile_no"> Mobile Number </string>
    <string name="fax"> Fax </string>
    <string name="temp"> Mobile Number </string>
    <string name="appointment"> Appointments </string>
    <string name="past"> Past </string>
    <string name="upcoming"> Upcoming </string>
    <string name="phone_number"> Phone Number </string>
    <string name="address">Address </string>
    <string name="address_mand">Address <font color='#FF0000'>*</font></string>
    <string name="city"> City </string>
    <string name="city_mand">City <font color='#FF0000'>*</font></string>
    <string name="zip_code"> Zip Code </string>
    <string name="registration_date"> Registration Date </string>
    <string name="member_status"> Member Status </string>
    <string name="login"> SIGN IN </string>
    <string name="forgot"> Forgot ?  </string>
    <string name="forgot_pass"> Forgot Password ?  </string>
    <string name="sales_overview"> Sales Analytics </string>
    <string name="overview"> Overview : </string>
    <string name="act_proj"> Actual Projection  </string>
    <string name="intial_proj"> Initial Projection  </string>
    <string name="current_proj"> Current Projection </string>
    <string name="proj_sale"> Projected Sales </string>
    <string name="diff_sale">Sales Difference </string>
    <string name="order">    Order </string>
    <string name="orders">    Orders </string>
    <string name="shopping"> Shopping </string>
    <string name="actual">   Actual </string>
    <string name="Rs">\u20B9</string>
    <string name="location"> Location </string>
    <string name="all_day"> All Day </string>
    <string name="from"> From </string>
    <string name="to">   To </string>
    <string name="host"> Host </string>
    <string name="participant"> Participants </string>
    <string name="contact"> Contact </string>
    <string name="customers"> Customers </string>
    <string name="bussiness_partners"> Business Partners </string>
    <string name="new_contact">Contact </string>
    <string name="account"> Account </string>
    <string name="repeat">  Repeat </string>
    <string name="task_owener"> Task Owner </string>
    <string-array name="subject">

        <item>--None--</item>
        <item>Call</item>
        <item>Send Quote</item>
        <item>Send Letter</item>
        <item>Other</item>

    </string-array>
    <string name="due_date"> Due Date </string>
    <string name="date"> 2021-02-11 </string>
    <string name="status">Status </string>
    <string name="status_mand">Status <font color='#FF0000'>*</font></string>
    <string name="priority"> Priority </string>
    <string name="submit"> Submit </string>
    <string name="performance"> Performance </string>
    <string name="days"> Days </string>
    <string name="average"> Average </string>
    <string name="aging"> Aging </string>
    <string name="select_tax"> Select Tax </string>
    <string name="something_wron_msz">Something went wrong. </string>
    <string name="qty"> Quantity </string>
    <string name="enter_qty"> Enter Quantity </string>
    <string name="discount_percent"> Enter Discount (%) on Item </string>
    <string name="next">Next</string>
    <string name="ex_5000">Ex. 5000</string>
    <string name="add">Add</string>
    <string name="time_val">12:00 AM</string>
    <string name="source">Source</string>
    <string name="follow_up">Follow Up</string>
    <string name="comment_mand">Comment<font color='#FF0000'>*</font></string>
    <string name="hold">Hold</string>
    <string name="all_leads">All Leads</string>
    <string name="communication_mode">Mode of Communication</string>
    <string name="reminder">Reminder</string>
    <string name="feedback">Feedback</string>
    <string name="newlead">New</string>
    <string name="junk">Junk</string>
    <string name="qualified">Qualified</string>
    <string name="freight_charge">Freight Charge</string>
</resources>