<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.BlankFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            android:orientation="vertical">

            <include
                android:id="@+id/headerLayout"
                layout="@layout/header_bottom_rounded" />

        </LinearLayout>

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10"
                android:layout_marginRight="@dimen/size_10"
                android:orientation="vertical"
                android:paddingTop="@dimen/size_10">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_70"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="false"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/size_2"
                    app:cardElevation="@dimen/size_2"
                    app:cardUseCompatPadding="true">


                    <RelativeLayout
                        android:id="@+id/item_frame"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_60"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/size_5">

                        <TextView
                            android:id="@+id/itemCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/muli_bold"
                            android:text="@string/items"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_16" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="@dimen/size_5"
                            android:src="@drawable/ic_arrow_left_24dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/itemCount"
                            android:layout_marginTop="@dimen/size_5"
                            android:fontFamily="@font/muli_regular"
                            android:text="@string/view_all_iem"
                            android:textColor="@color/light_grey_box"
                            android:textSize="@dimen/text_size_14" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_5"
                    android:layout_marginRight="@dimen/size_5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_15"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:id="@+id/total_before_discont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_10"
                        android:fontFamily="@font/muli_regular"
                        android:text="Amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/total_before_discont_value"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_45"
                        android:layout_marginTop="@dimen/size_10"
                        android:background="@drawable/rounded_border"
                        android:editable="false"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/ex_5000"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/size_15"
                        android:textColorHint="@color/light_grey_box"
                        android:textSize="@dimen/text_size_14" />

                    <TextView
                        android:id="@+id/_discont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_15"
                        android:fontFamily="@font/muli_regular"
                        android:text="@string/_discont"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/discont_value"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_45"
                        android:layout_marginTop="@dimen/size_10"
                        android:background="@drawable/rounded_border"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="center_vertical"
                        android:hint="0"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:maxLength="4"
                        android:paddingLeft="@dimen/size_15"
                        android:textColorHint="@color/light_grey_box"
                        android:textSize="@dimen/text_size_14" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_15"
                        android:fontFamily="@font/muli_regular"
                        android:text="@string/freight_charge"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_14" />

                    <EditText
                        android:id="@+id/etFrieghtCharge"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_45"
                        android:layout_marginTop="@dimen/size_10"
                        android:background="@drawable/rounded_border"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="center_vertical"
                        android:hint="0"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/size_15"
                        android:maxLength="6"
                        android:textColorHint="@color/light_grey_box"
                        android:textSize="@dimen/text_size_14" />



                    <Button
                        android:id="@+id/next_button"
                        android:layout_width="@dimen/size_100"
                        android:layout_height="@dimen/text_45"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/size_30"
                        android:layout_marginBottom="@dimen/size_20"
                        android:background="@drawable/button_rounded_corner"
                        android:backgroundTint="@color/colorPrimary"
                        android:clickable="true"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>